connected scss, corrected styles, added variables

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,8 @@
+@import './variables';
+@import './libs/normalize';
+
+@import './components/all';
+
 @font-face {
     font-family: 'Proxima Nova';
     src: url('./fonts/ProximaNova-Black.eot');
@@ -40,374 +45,7 @@
     font-weight: 800;
     font-style: normal;
 }
-* {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    outline: none;
-    font-family: 'Proxima Nova', Roboto, system-ui, Tahoma, sans-serif;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-html {
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-}
-body {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    color: #232323;
-}
-a,
-span,
-p,
-b,
-h1,
-h2,
-h3,
-h4,
-h5 {
-    color: #232323;
-}
-h1 {
-    font-size: 48px;
-}
-h2 {
-    font-weight: 600;
-    font-size: 28px;
-    line-height: 30px;
-}
-a {
-    text-decoration: none;
-}
-.header {
-    border-bottom: 1px solid #f6f6f6;
-    padding: 40px 0;
-}
-.header .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-.header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-}
-.header__logo img {
-    margin-right: 15px;
-}
-.header__logo h1 {
-    color: #181818;
-    font-size: 24px;
-    letter-spacing: 1%;
-    text-transform: uppercase;
-    font-weight: 800;
-}
-.header__logo p {
-    color: #7b7b7b;
-}
-.button {
-    display: inline-block;
-    background-color: #fe5f1e;
-    border-radius: 30px;
-    padding: 10px 20px;
-    min-width: 100px;
-    text-align: center;
-    cursor: pointer;
-    -webkit-transition: background-color 0.15s ease-in-out,
-        border-color 0.15s ease-in-out;
-    transition: background-color 0.15s ease-in-out,
-        border-color 0.15s ease-in-out;
-    border: 1px solid transparent;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.button,
-.button span {
-    color: #fff;
-}
-.button i,
-.button span,
-.button path,
-.button svg {
-    -webkit-transition: all 0.15s ease-in-out;
-    transition: all 0.15s ease-in-out;
-}
-.button:hover {
-    background-color: #f24701;
-}
-.button:active {
-    background-color: #de4101;
-    -webkit-transform: translateY(1px);
-    transform: translateY(1px);
-}
-.button--circle {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 32px;
-    height: 32px;
-    min-width: 32px;
-    padding: 0;
-    border-width: 2px;
-}
-.button--black {
-    background-color: #232323;
-}
-.button--black:hover,
-.button--black:active {
-    background-color: #3d3d3d;
-}
-.button--outline {
-    background-color: #fff;
-    border-color: #fe5f1e;
-}
-.button--outline,
-.button--outline span {
-    color: #fe5f1e;
-}
-.button--outline svg path {
-    fill: #fe5f1e;
-}
-.button--outline:hover {
-    background-color: #fe5f1e;
-}
-.button--outline:hover,
-.button--outline:hover span {
-    color: #fff;
-}
-.button--outline:hover svg path {
-    fill: #fff;
-}
-.button--outline:active {
-    background-color: #f24701;
-}
-.button__delimiter {
-    width: 1px;
-    height: 25px;
-    background-color: rgba(255, 255, 255, 0.25);
-    margin-left: 14px;
-    margin-right: 14px;
-}
-.button--add svg {
-    margin-right: 2px;
-}
-.button--add span {
-    font-weight: 600;
-    font-size: 16px;
-}
-.button--add:hover i {
-    background-color: #fff;
-    color: #fe5f1e;
-}
-.button--add i {
-    display: inline-block;
-    border-radius: 30px;
-    background-color: #fe5f1e;
-    color: #fff;
-    font-weight: 600;
-    width: 22px;
-    height: 22px;
-    font-style: normal;
-    font-size: 13px;
-    line-height: 22px;
-    position: relative;
-    top: -1px;
-    left: 3px;
-}
-.button--cart {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    line-height: 23px;
-    padding: 12px 25px;
-}
-.button--cart svg {
-    margin-right: 8px;
-    margin-bottom: 1px;
-}
-.button--cart span {
-    font-weight: 600;
-    font-size: 16px;
-}
-.categories ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-}
-.categories ul li {
-    background-color: #f9f9f9;
-    padding: 13px 30px;
-    border-radius: 30px;
-    margin-right: 10px;
-    font-weight: bold;
-    cursor: pointer;
-    -webkit-transition: background-color 0.1s ease-in-out;
-    transition: background-color 0.1s ease-in-out;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.categories ul li:hover {
-    background-color: #f4f4f4;
-}
-.categories ul li:active {
-    background-color: #ececec;
-}
-.categories ul li.active {
-    background-color: #282828;
-    color: #fff;
-}
-.sort {
-    position: relative;
-}
-.sort__label {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-.sort__label svg {
-    margin-right: 8px;
-}
-.sort__label b {
-    margin-right: 8px;
-}
-.sort__label span {
-    color: #fe5f1e;
-    border-bottom: 1px dashed #fe5f1e;
-    cursor: pointer;
-}
-.sort__popup {
-    position: absolute;
-    right: 0;
-    margin-top: 15px;
-    background: #ffffff;
-    -webkit-box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 10px 0;
-    width: 160px;
-}
-.sort__popup ul {
-    overflow: hidden;
-}
-.sort__popup ul li {
-    padding: 12px 20px;
-    cursor: pointer;
-}
-.sort__popup ul li.active,
-.sort__popup ul li:hover {
-    background: rgba(254, 95, 30, 0.05);
-}
-.sort__popup ul li.active {
-    font-weight: bold;
-    color: #fe5f1e;
-}
-.sushi-block {
-    width: 280px;
-    text-align: center;
-    margin-bottom: 65px;
-    border: 1px solid #edebe8;
-    border-radius: 10px;
-}
-/* .sushi-block:not(:nth-of-type(4n)) {
-  margin-right: 35px;
-} */
-.sushi-block__image {
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    width: 279px;
-}
-.sushi-block__title {
-    padding-top: 15px;
-    padding-left: 10px;
-    text-align: left;
-    font-size: 20px;
-    font-weight: 900;
-    margin-bottom: 20px;
-}
-.sushi-block__descr {
-    text-align: left;
-    padding-left: 10px;
-    color: #8d8c8d;
-}
-.sushi-block__selector ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-.sushi-block__selector ul:first-of-type {
-    margin-bottom: 6px;
-}
-.sushi-block__selector ul li {
-    padding: 8px;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 14px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.sushi-block__selector ul li.active {
-    background: #ffffff;
-    -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
-    border-radius: 5px;
-    cursor: auto;
-}
-.sushi-block__bottom {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    padding: 0 10px;
-}
-.sushi-block__price {
-    font-weight: bold;
-    font-size: 17px;
-    line-height: 27px;
-    letter-spacing: 0.015em;
-}
+
 body {
     /* background-color: #ffdf8c; */
     background-color: #fff;
