--- a/src/scss/components/_sushi-block.scss
+++ b/src/scss/components/_sushi-block.scss
@@ -12,6 +12,7 @@
     }
 
     &__title {
+        height: 60px;
         padding-top: 15px;
         padding-left: 10px;
         text-align: left;
@@ -20,6 +21,7 @@
         margin-bottom: 20px;
     }
     &__descr {
+        height: 86px;
         text-align: left;
         padding-left: 10px;
         color: #8d8c8d;
