--- a/src/scss/components/_sushi-block.scss
+++ b/src/scss/components/_sushi-block.scss
@@ -23,7 +23,7 @@
     &__descr {
         height: 86px;
         text-align: left;
-        padding-left: 10px;
+        padding: 0 10px;
         color: #8d8c8d;
     }
     &__selector {
