--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,315 +14,297 @@ body {
     border-radius: 10px;
     max-width: 1400px;
 }
+
 .content {
     padding: 40px 0;
+
+    &__title {
+        margin: 35px 0;
+    }
+
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
-.content__title {
-    font-size: 38px;
-    font-weight: 800;
-    margin-bottom: 50px;
-    margin-top: 60px;
-}
-.content__items {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-.content__top {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
+
 .container {
-    width: 90%;
+    width: $container-width;
     margin: 0 auto;
+
+    &--cart {
+        max-width: 820px;
+        margin: 90px auto;
+        .content__title {
+            margin: 0;
+        }
+    }
 }
-.container--cart {
-    max-width: 820px;
-    margin: 90px auto;
-}
-.container--cart .content__title {
-    margin: 0;
-}
-.cart__top {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-.cart .content__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    font-size: 32px;
-}
-.cart .content__title svg {
-    position: relative;
-    top: -2px;
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-}
-.cart .content__title svg path {
-    stroke: #232323;
-    stroke-width: 1.9;
-}
-.cart__clear {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.cart__clear span {
-    display: inline-block;
-    margin-left: 7px;
-    color: #b6b6b6;
-    font-size: 18px;
-}
-.cart__clear span,
-.cart__clear svg,
-.cart__clear path {
-    -webkit-transition: all 0.15s ease-in-out;
-    transition: all 0.15s ease-in-out;
-}
-.cart__clear:hover svg path {
-    stroke: #373737;
-}
-.cart__clear:hover span {
-    color: #373737;
-}
-.cart__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    border-top: 1px solid #f6f6f6;
-    padding-top: 30px;
-    margin-top: 30px;
-}
-.cart__item-img {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin-right: 15px;
-    width: 10%;
-}
-.cart__item-img img {
-    width: 80px;
-    height: 80px;
-}
-.cart__item-info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 40%;
-}
-.cart__item-info h3 {
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 27px;
-    letter-spacing: 0.01em;
-}
-.cart__item-info p {
-    font-size: 18px;
-    color: #8d8d8d;
-}
-.cart__item-count {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    width: 13%;
-}
-.cart__item-count-minus svg path:first-of-type {
-    display: none;
-}
-.cart__item-count b {
-    font-size: 22px;
-}
-.cart__item-price {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 33%;
-}
-.cart__item-price b {
-    font-weight: bold;
-    font-size: 22px;
-    letter-spacing: 0.01em;
-}
-.cart__item-remove {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    width: 4%;
-}
-.cart__item-remove .button {
-    border-color: #ddd;
-}
-.cart__item-remove svg {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-.cart__item-remove svg path {
-    fill: #d0d0d0;
-}
-.cart__item-remove .button svg {
-    width: 11.5px;
-    height: 11.5px;
-    position: relative;
-}
-.cart__item-remove .button:hover,
-.cart__item-remove .button:active {
-    border-color: #2a2a2a;
-    background-color: #2a2a2a;
-}
-.cart__bottom {
-    margin: 50px 0;
-}
-.cart__bottom-details {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-.cart__bottom-details span {
-    font-size: 22px;
-}
-.cart__bottom-details span:last-of-type b {
-    color: #fe5f1e;
-}
-.cart__bottom-buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin-top: 40px;
-}
-.cart__bottom-buttons .go-back-btn {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 210px;
-    border-color: #ddd;
-}
-.cart__bottom-buttons .go-back-btn span {
-    color: #c3c3c3;
-    font-weight: 500;
-    font-weight: 600;
-}
-.cart__bottom-buttons .go-back-btn:hover {
-    background-color: #111;
-    border-color: #111;
-}
-.cart__bottom-buttons .go-back-btn:hover span {
-    color: #f6f6f6;
-}
-.cart__bottom-buttons .go-back-btn svg {
-    margin-right: 12px;
-}
-.cart__bottom-buttons .go-back-btn svg path {
-    fill: transparent;
-    stroke-width: 2;
-}
-.cart__bottom-buttons .pay-btn {
-    font-size: 16px;
-    font-weight: 600;
-    width: 210px;
-    padding: 16px;
-}
-.cart--empty {
-    margin: 0 auto;
-    width: 560px;
-    text-align: center;
-}
-.cart--empty h2 {
-    font-size: 32px;
-    margin-bottom: 10px;
-}
-.cart--empty p {
-    font-size: 18px;
-    line-height: 145.4%;
-    letter-spacing: 0.01em;
-    color: #777777;
-}
-.cart--empty icon {
-    position: relative;
-    top: 2px;
-}
-.cart--empty img {
-    display: block;
-    width: 300px;
-    margin: 45px auto 60px;
-}
-.cart--empty .button--black {
-    padding: 12px 0 14px;
-    width: 230px;
-    margin: 0 auto;
-    font-weight: 600;
-    font-size: 18px;
+
+.cart {
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .content__title {
+        display: flex;
+        align-items: center;
+        font-size: 32px;
+
+        svg {
+            position: relative;
+            top: -2px;
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+            path {
+                stroke: $black;
+                stroke-width: 1.9;
+            }
+        }
+    }
+
+    &__clear {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        @include noselect();
+
+        span {
+            display: inline-block;
+            margin-left: 7px;
+            color: #b6b6b6;
+            font-size: 18px;
+        }
+
+        span,
+        svg,
+        path {
+            transition: all $duration ease-in-out;
+        }
+
+        &:hover {
+            svg {
+                path {
+                    stroke: darken($color: #b6b6b6, $amount: 50);
+                }
+            }
+            span {
+                color: darken($color: #b6b6b6, $amount: 50);
+            }
+        }
+    }
+
+    &__item {
+        display: flex;
+        width: 100%;
+        border-top: 1px solid $gray-line;
+        padding-top: 30px;
+        margin-top: 30px;
+
+        &-img {
+            display: flex;
+            align-items: center;
+            margin-right: 15px;
+            width: 10%;
+
+            img {
+                width: 80px;
+                height: 80px;
+            }
+        }
+
+        &-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 40%;
+
+            h3 {
+                font-weight: bold;
+                font-size: 22px;
+                line-height: 27px;
+                letter-spacing: 0.01em;
+            }
+
+            p {
+                font-size: 18px;
+                color: #8d8d8d;
+            }
+        }
+
+        &-count {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 13%;
+
+            &-minus {
+                svg {
+                    path:first-of-type {
+                        display: none;
+                    }
+                }
+            }
+
+            b {
+                font-size: 22px;
+            }
+        }
+
+        &-price {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 33%;
+
+            b {
+                font-weight: bold;
+                font-size: 22px;
+                letter-spacing: 0.01em;
+            }
+        }
+
+        &-remove {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            width: 4%;
+
+            .button {
+                border-color: darken($color: $gray-line, $amount: 10);
+            }
+
+            svg {
+                transform: rotate(45deg);
+
+                path {
+                    fill: darken($color: $gray-line, $amount: 15);
+                }
+            }
+
+            .button {
+                svg {
+                    width: 11.5px;
+                    height: 11.5px;
+                    position: relative;
+                }
+                &:hover,
+                &:active {
+                    border-color: darken($color: $gray-line, $amount: 80);
+                    background-color: darken($color: $gray-line, $amount: 80);
+                }
+            }
+        }
+    }
+
+    &__bottom {
+        margin: 50px 0;
+
+        &-details {
+            display: flex;
+            justify-content: space-between;
+
+            span {
+                font-size: 22px;
+
+                &:last-of-type {
+                    b {
+                        color: $red;
+                    }
+                }
+            }
+        }
+
+        &-buttons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 40px;
+
+            .go-back-btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 210px;
+
+                border-color: darken($color: $gray-line, $amount: 10);
+
+                span {
+                    color: darken($color: $gray-line, $amount: 20);
+                    font-weight: 500;
+                    font-weight: 600;
+                }
+
+                &:hover {
+                    background-color: darken($color: $gray-line, $amount: 90);
+                    border-color: darken($color: $gray-line, $amount: 90);
+
+                    span {
+                        color: $gray-line;
+                    }
+                }
+
+                svg {
+                    margin-right: 12px;
+                    path {
+                        fill: transparent;
+                        stroke-width: 2;
+                    }
+                }
+            }
+
+            .pay-btn {
+                font-size: 16px;
+                font-weight: 600;
+                width: 210px;
+                padding: 16px;
+            }
+        }
+    }
+
+    &--empty {
+        margin: 0 auto;
+        width: 560px;
+        text-align: center;
+
+        h2 {
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 145.4%;
+            letter-spacing: 0.01em;
+            color: #777777;
+        }
+
+        icon {
+            position: relative;
+            top: 2px;
+        }
+
+        img {
+            display: block;
+            width: 300px;
+            margin: 45px auto 60px;
+        }
+
+        .button--black {
+            padding: 12px 0 14px;
+            width: 230px;
+            margin: 0 auto;
+            font-weight: 600;
+            font-size: 18px;
+        }
+    }
 }
