--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -2,9 +2,8 @@
 
 .categories {
     ul {
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
+
         li {
             background-color: #f9f9f9;
             padding: 13px 30px;
@@ -16,11 +15,13 @@
             @include noselect();
 
             &:hover {
-                background-color: #f4f4f4;
+                background-color: darken(#f9f9f9, 2%);
             }
+
             &:active {
-                background-color: #ececec;
+                background-color: darken(#f9f9f9, 5%);
             }
+
             &.active {
                 background-color: #282828;
                 color: #fff;
